# VulkanFEM

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Readme.md
data/: Ke.txt
include/: FEM.hpp  FEMDefines.hpp  FEMGPU.hpp  IncompleteCholeskyPreconditioner.hpp  Ke.h  MatrixFreeSparse.hpp  MultigridPreconditioner.hpp  RestrictionOperator.hpp  in.hpp  out.hpp  utils.hpp
patches/: api_search_fix.patch
scripts/: outputToC.m
shaders/: CMakeLists.txt  CWiseAdd.comp  CWiseMult.comp  ConjugateGradient_1.comp  ConjugateGradient_2.comp  FixedNodes.comp  GaussSeidel.comp  Interpolate.comp  InterpolateDouble.comp  MatxVec.comp  PreSmoothAndAXPY.comp  Restrict.comp  RestrictDouble.comp  Smooth.comp  VecDotVec.comp  conjugateGradient.comp  matxVec.comp  vecxVec.comp
src/: CMakeLists.txt  FEM.cpp  FEMGPU.cpp  Ke.cpp  MatrixFreeSparse.cpp  inout.cpp  main.cpp  out.hpp  utils.cpp
